# Skibidi-Notes

./: .env_sample  .gitignore  CHANGELOG.md  README.md  TODO.md  docker-compose.yaml  makefile  package-lock.json  package.json
.github/workflows/: eslint.yml
backend/: main.py  pyproject.toml
backend+/: elevenlab.py  main.py  out.py  subtitle.py  summarise.py  utils.py
backend+/subtitles/: 6fae48e4-fa72-487d-8e8d-ea8c37f7f501.srt
backend/config/: env.py
backend/src/core/queue/: base.py
backend/src/db/: base.py  db.py  driver.py
backend/src/langchain/: base.py
backend/src/modules/auth/: auth_controller.py  auth_schema.py  auth_service.py
backend/src/modules/auth/guards/: guard.py
backend/src/modules/chat/: chat_controller.py  chat_service.py
backend/src/modules/generator/: generator_controller.py  generator_model.py  generator_schema.py  generator_service.py
backend/src/modules/generator/integrations/elevenlabs/: base.py
backend/src/modules/generator/integrations/langchain/: base.py
backend/src/modules/generator/integrations/movieclip/: base.py
backend/src/modules/generator/integrations/subtitles/: base.py
backend/src/modules/generator/runner/: base.py  tasks.py
backend/src/modules/generator/utils/: util.py
backend/src/modules/preprocessing/: preprocessing_controller.py
backend/src/modules/quiz/: quiz_controller.py  quiz_model.py  quiz_schema.py  quiz_service.py
backend/src/modules/root/: root_controller.py
backend/src/modules/user/: user_controller.py  user_model.py  user_schema.py  user_service.py
backend/src/scripts/: run.py
docker/: dockerfile-backend
docs/backend/: info.md
docs/deployment/: info.md
docs/frontend/: info.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/account/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/generating/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/providers/queries/: auth.ts  quiz.ts  users.ts
frontend/src/app/providers/queries/types/auth/: types.ts
frontend/src/app/quiz/: page.tsx
frontend/src/app/quiz/[id]/: page.tsx
frontend/src/app/quiz_review/: page.tsx
frontend/src/app/quiz_review/[id]/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/store/: authStore.ts  redirectStore.ts  userStore.ts
frontend/src/app/test/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: create.tsx  library.tsx  loading.tsx  login.tsx  navbar.tsx  navbar2.tsx  popup.tsx  quiz.tsx  quiz_review.tsx  register.tsx  spinner.tsx  toilet_flushing.tsx
frontend/src/components/auth/: appWrapper.tsx  authGuard.tsx  unAuthGuard.tsx
frontend/src/components/ui/: input.tsx  tabs.tsx
frontend/src/lib/schemas/: userSchema.ts
