[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Jaren",email = "j.limhaan.2024@computing.smu.edu.sg"},
    {name = "Ada", email = "ada.chia.2024@computing.smu.edu.sg"},
    {name = "Heng Rui", email = "hr.tiong.2024@computing.smu.edu.sg"},
    {name= "Yan Shuen", email = "ys.lim.2024@computing.smu.edu.sg"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic (>=2.11.3,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "email-validator (>=2.2.0,<3.0.0)"
]

[tool.poetry]
package-mode = false 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

