[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Jaren",email = "j.limhaan.2024@computing.smu.edu.sg"},
    {name = "Ada", email = "ada.chia.2024@computing.smu.edu.sg"},
    {name = "Heng Rui", email = "hr.tiong.2024@computing.smu.edu.sg"},
    {name= "Yan Shuen", email = "ys.lim.2024@computing.smu.edu.sg"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "pydantic (>=2.11.3,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "openai (>=1.86.0,<2.0.0)",
    "pypdf (>=5.6.0,<6.0.0)",
    "langchain-community (>=0.3.25,<0.4.0)",
    "langchain-openai (>=0.3.22,<0.4.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "elevenlabs (>=2.5.0,<3.0.0)",
    "bcrypt (<4.1.0)",
    "moviepy (==1.0.3)",
    "termcolor (>=3.1.0,<4.0.0)",
    "assemblyai (>=0.41.5,<0.42.0)",
    "pillow (==9.5.0)",
    "srt-equalizer (==0.1.8)",
    "pgvector (>=0.3.0,<0.4.0)",
    "langchain-postgres (>=0.0.15,<0.0.16)",
    "psycopg[binary] (>=3.2.9,<4.0.0)"
]

[tool.poetry]
package-mode = false 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
